added document model to the notes program

--- a/notes/index.html
+++ b/notes/index.html
@@ -7,11 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>The program to calculate mminimum currency notes of your amount</h1>
-    <h3>
-      Please Refresh the page and enter the amount and then open Console for
-      solution
-    </h3>
+    <h1>Minimum Currency notes of a value</h1>
+    <input id="amount" type="text" />
+    <button onclick="notesCheck()" type="submit">check</button>
+    <h2 id="notesOutput">Result:</h2>
     <script src="./script.js"></script>
   </body>
 </html>
